--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 ::placeholder { 
-    color: #dadada;
     font-size: 12px;
     padding: 3px; 
 }
@@ -81,14 +80,14 @@ body {
     border: 0;
     border-radius: 0;
     padding: 0 5px 0 5px;
-    background-color: rgba(0, 0, 0, 0.486);
-    color: white;
+    background-color: rgba(0, 0, 0, 0.219);
+    color: rgb(58, 58, 58);
     width: 100%;
 }
 .option input[type="text"]:focus { outline: 0 }
 
 .btn-valid {
-    color: rgba(0, 0, 0, 0.479);
+    color: rgba(0, 0, 0, 0.219);
     background-color: transparent;
     border: 0;
     transition: 0.2s;
